# ida-multi-mcp

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  installation.md
docs/.ssot/: HISTORY.md  PRD.md  TODO.md
docs/.ssot/architectures/: 00_INDEX.md  01_system_context.md  02_component_decomposition.md  03_runtime_sequences.md  04_instance_lifecycle.md  05_data_model_persistence.md  06_tool_discovery_schema_federation.md  07_transport_protocol.md  08_concurrency_sync.md  09_security_architecture.md  10_reliability_failure.md  11_performance_scalability.md  12_cli_installation_architecture.md  13_plugin_bootstrap.md  14_observability_diagnostics.md  15_testing_architecture.md  16_compatibility_matrix.md  17_extensibility_evolution.md  18_module_ownership.md  19_operational_runbook.md  20_adr_summary.md  21_architecture_problems_spec.md
docs/.ssot/contracts/: INDEX.md  registry_contract.md  routing_contract.md  (+1 more)
docs/ops/: ROADMAP.md
docs/phases/: README.md
docs/plans/: README.md  mcp-tool-improvement.md
scripts/: benchmark.py
src/ida_multi_mcp/: __main__.py  cache.py  filelock.py  health.py  ida_tool_schemas.json  idalib_manager.py  idalib_worker.py  instance_id.py  registry.py  router.py  server.py
tests/: test_architecture_fixes.py  test_idalib_manager.py  test_install_factory_droid.py  test_install_windows_settings_fallback.py  test_list_instances_schema.py  test_registry.py  test_router.py  test_router_binary_name_normalization.py  test_router_requires_instance_id.py  test_utils_pure.py
(+26 files in other folders)
